Introduces improved new synchronization