@@ -9,9 +9,10 @@ import software.amazon.awssdk.services.dynamodb.model.AttributeValue;
 import wrzesniak.rafal.my.multimedia.manager.domain.user.SyncInfo;
 
 import java.time.LocalDateTime;
-import java.util.Arrays;
+import java.util.ArrayList;
+import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.Map;
 
 @Slf4j
 @Component
@@ -19,25 +20,25 @@ public class SynchronizationConverter implements AttributeConverter<List<SyncInf
 
     @Override
     public AttributeValue transformFrom(List<SyncInfo> input) {
-        String preparedString = input.stream()
-                .map(syncInfo -> syncInfo.syncTimestamp().toString() + " | " + syncInfo.changedListIds().toString().substring(1, syncInfo.changedListIds().toString().length() - 1))
-                .reduce("", (s1, s2) -> s1 + " || " + s2);
         return AttributeValue.builder()
-                .s(preparedString.length() > 4 ? preparedString.substring(4) : "")
+                .l(input.stream()
+                        .map(syncInfo -> AttributeValue.builder()
+                                .m(Map.of(syncInfo.syncTimestamp().toString(), AttributeValue.fromSs(syncInfo.changedListIds())))
+                                .build())
+                        .toList()
+                )
                 .build();
     }
 
     @Override
     public List<SyncInfo> transformTo(AttributeValue input) {
-        if(input.s().isEmpty()) {
-            return List.of();
-        }
-        return Arrays.stream(input.s().split(" \\|\\| "))
-            .map(s -> {
-                String[] splited = s.split(" \\| ");
-                return new SyncInfo(LocalDateTime.parse(splited[0]), Arrays.asList(splited[1].split(", ")));
-            })
-            .collect(Collectors.toList());
+        return new ArrayList<>(input.l().stream()
+                .map(AttributeValue::m)
+                .map(stringAttributeValueMap -> new SyncInfo(LocalDateTime.parse(stringAttributeValueMap.keySet().stream().findFirst().orElseThrow()), stringAttributeValueMap.values().stream()
+                        .map(AttributeValue::ss)
+                        .flatMap(Collection::stream)
+                        .toList()))
+                .toList());
     }
 
     @Override
@@ -47,6 +48,6 @@ public class SynchronizationConverter implements AttributeConverter<List<SyncInf
 
     @Override
     public AttributeValueType attributeValueType() {
-        return AttributeValueType.S;
+        return AttributeValueType.L;
     }
 }
